--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "lint-staged": "^16.1.2",
+    "mongodb": "^6.18.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -34,6 +35,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@shelf/jest-mongodb": "^5.2.2",
     "@swc/core": "^1.13.0",
     "@swc/jest": "^0.2.39",
     "@types/express": "^4.17.17",
