--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "lint-staged": "^16.1.2",
-    "mongodb": "^6.18.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -35,7 +34,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@shelf/jest-mongodb": "^5.2.2",
+    "@shelf/jest-mongodb": "^4.3.2",
     "@swc/core": "^1.13.0",
     "@swc/jest": "^0.2.39",
     "@types/express": "^4.17.17",
@@ -49,6 +48,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^9.1.7",
     "jest": "^29.5.0",
+    "mongodb": "^6.18.0",
+    "mongodb-memory-server": "^10.1.4",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
