--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     },
     "incremental": true,
     "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowJs": true,
     "strictNullChecks": false,
     "noImplicitAny": false,
     "strict": true,
@@ -22,5 +24,7 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "include": ["src/**/*.ts", "./typings/*"],
+   "exclude": ["node_modules", "jest.config.js"]
 }
